--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -11,9 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with: { fetch-depth: 0 }
-      - uses: actions/setup-java@v4
-        name: Set up JDK
-        with: { distribution: temurin, java-version: 17 }
+      - uses: oracle-actions/setup-java@v1
+        name: 'Set up latest Oracle JDK 24'
+        with:
+          website: oracle.com
+          release: 24
       - name: Build & Test
         working-directory: backend
         run: ./gradlew clean build
@@ -23,4 +25,24 @@ jobs:
           projectBaseDir: backend
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_BACKEND }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  sonar-frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with: { fetch-depth: 0 }
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with: { node-version: 20 }
+      - name: Install & Test with Coverage
+        working-directory: frontend
+        run: |
+          npm ci
+          npm test -- --coverage
+      - uses: SonarSource/sonarqube-scan-action@v5
+        name: Run SonarCloud Scan
+        with:
+          projectBaseDir: frontend
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_FRONTEND }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
