--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '4.0.0-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'com.diffplug.spotless' version '6.25.0'
+	id "org.sonarqube" version "6.2.0.5505"
 }
 
 group = 'com.budgetwise'
@@ -24,6 +25,14 @@ spotless {
     }
 }
 
+sonar {
+  properties {
+    property "sonar.projectKey", "org-frontend"
+    property "sonar.organization", "nuwan-samarasinghe"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
+
 repositories {
 	mavenCentral()
 	maven { url = 'https://repo.spring.io/milestone' }
@@ -37,7 +46,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.liquibase:liquibase-core'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
