Docker implementation hot reload and vs code remote debug changes for the backend

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -10,4 +10,4 @@ RUN ./gradlew dependencies --no-daemon
 COPY src src
 
 # Run with Spring DevTools
-CMD ["sh", "-c", "./gradlew bootRun --no-daemon -x test"]
+CMD ["sh", "-c", "./gradlew bootRun -x test"]
