--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,6 +25,20 @@ spotless {
     }
 }
 
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
+
+bootRun {
+    jvmArgs = [
+        "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
+    ]
+	sourceResources sourceSets.main
+}
+
 sonar {
   properties {
     property "sonar.projectKey", "org-frontend"
@@ -53,6 +67,7 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:postgresql'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
