--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/budget_wise
 spring.datasource.username=budget_wise
 spring.datasource.password=budget_wise
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-# Optional: ensure Hibernate doesn’t auto-create schema
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
