--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -44,6 +44,7 @@ sonar {
     property "sonar.projectKey", "org-frontend"
     property "sonar.organization", "nuwan-samarasinghe"
     property "sonar.host.url", "https://sonarcloud.io"
+	property "sonar.java.binaries", "build/classes/java/main"
   }
 }
 
