--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -16,18 +16,32 @@ jobs:
           release: 24
       - name: Build & Test
         working-directory: backend
+        run: ./gradlew clean build
+      - uses: SonarSource/sonarqube-scan-action@v5
+        name: Run SonarCloud Scan
+        with:
+          projectBaseDir: backend
+          args: >
+            -Dsonar.projectKey=budget-wise-backend
+            -Dsonar.organization=nuwan-samarasinghe
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.java.binaries=build/classes/java/main
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_BACKEND }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew clean build sonar
   sonar-frontend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
+        with:
+          fetch-depth: 0
       - name: Set up Node.js
         uses: actions/setup-node@v4
-        with: { node-version: 20 }
+        with:
+          node-version: 20
+      - name: Install dependencies
+        run: npm ci
+        working-directory: frontend
       - uses: SonarSource/sonarqube-scan-action@v5
         name: Run SonarCloud Scan
         with:
