--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=org-frontend
+sonar.projectKey=budget-wise-frontend
 sonar.organization=nuwan-samarasinghe
 sonar.sources=src
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
