Adding repositories and manager changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "java.compile.nullAnalysis.mode": "automatic",
     "java.configuration.updateBuildConfiguration": "automatic",
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "sonarlint.connectedMode.project": {
+        "connectionId": "nuwan-samarasinghe",
+        "projectKey": "budget-wise-backend"
+    }
 }
