--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=org-backend
 sonar.organization=nuwan-samarasinghe
 sonar.sources=src/main/java
+sonar.coverage.jacoco.xmlReportPaths=${buildDir}/reports/jacoco/test/jacocoTestReport.xml
