--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -14,6 +14,8 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
+	sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 spotless {
