--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -9,14 +9,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with: { fetch-depth: 0 }
-      - uses: oracle-actions/setup-java@v1
-        name: 'Set up latest Oracle JDK 21'
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          website: oracle.com
-          release: 21
+          distribution: 'temurin'
+          java-version: '21'
       - name: Build & Test
         working-directory: backend
-        run: ./gradlew clean build test
+        run: ./gradlew clean build --no-daemon
       - uses: SonarSource/sonarqube-scan-action@v5
         name: Run SonarCloud Scan
         with:
