--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
+      - name: Build & Test
+        working-directory: backend
+        run: ./gradlew clean build test
       - uses: SonarSource/sonarqube-scan-action@v5
         name: Run SonarCloud Scan
         with:
