Adding authentication changes

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=budget_wise
 spring.datasource.password=budget_wise
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret=your-very-long-and-secure-secret-key-1234567890
+jwt.expirationMs=86400000
