--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -91,6 +91,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.modelmapper:modelmapper:3.2.4'
 	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
