--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-is": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.1.0",
     "tailwind-merge": "^1.12.0",
