--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/budget_wise
 spring.datasource.username=budget_wise
 spring.datasource.password=budget_wise
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yml
 
 jwt.secret=your-very-long-and-secure-secret-key-1234567890
 jwt.expirationMs=86400000
