--- a/backend/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yml
@@ -415,7 +415,6 @@ databaseChangeLog:
         referencedTableName: bwise_category
         referencedTableSchemaName: public
         validate: true
-databaseChangeLog:
-  - includeAll:
-      path: changesets
+- include:
+      file: changesets/2025-09-16-2043.yml
       relativeToChangelogFile: true
