--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+  dependencies {
+    classpath 'org.liquibase:liquibase-core:4.26.0'
+  }
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.3'
@@ -5,6 +14,7 @@ plugins {
 	id 'com.diffplug.spotless' version '6.25.0'
 	id "org.sonarqube" version "6.2.0.5505"
 	id 'jacoco'
+  id 'org.liquibase.gradle' version "3.0.2"
 }
 
 group = 'com.budgetwise'
@@ -83,20 +93,31 @@ repositories {
 	maven { url = 'https://repo.spring.io/snapshot' }
 }
 
+configurations {
+  liquibaseRuntime.extendsFrom runtimeClasspath
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
-    implementation 'org.modelmapper:modelmapper:3.2.4'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+  implementation 'org.liquibase:liquibase-core:4.26.0'
+  implementation 'org.springframework.boot:spring-boot-starter-aop'
+  implementation 'org.modelmapper:modelmapper:3.2.4'
+  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+  liquibaseRuntime 'org.liquibase:liquibase-core:4.26.0'
+  liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:3.0.2'
+  liquibaseRuntime 'info.picocli:picocli:4.6.1'
+  liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate6:4.26.0'
+  liquibaseRuntime 'org.postgresql:postgresql:42.7.4'
+  liquibaseRuntime files(sourceSets.main.output)
 	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
-    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+  implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
@@ -106,6 +127,35 @@ dependencies {
 	testImplementation 'net.datafaker:datafaker:2.4.3'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+}
+
+tasks.withType(org.liquibase.gradle.LiquibaseTask).configureEach {
+  dependsOn("classes")
+}
+
+tasks.register("printLiquibaseRuntime") {
+  doLast {
+    configurations.liquibaseRuntime.resolve().each { println it }
+  }
+}
+
+liquibase {
+  runList = 'main'
+  activities {
+    main {
+      changelogFile "db/changelog/db.changelog-master.yml"
+      url "jdbc:postgresql://localhost:5432/budget_wise"
+      username "budget_wise"
+      password "budget_wise"
+      outputSchemas "public"
+      includeSchema false
+      referenceUrl """hibernate:spring:com.budgetwise,com.budgetwise.backend.models
+        ?dialect=org.hibernate.dialect.PostgreSQLDialect
+        &hibernate.default_schema=public
+        &hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+        &hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy"""
+    }
+  }
 }
 
 tasks.named('test') {
